--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
         </div>
       </div>
     </div>
-      <div class="birthday-text">Happy Birthday Asabi, Love you Always!!!</div>
+      <div class="birthday-text">To the most Amazing woman in the world, I must say that the world would probably exist in chaos without you, you are an epitome of beauty, a goddess. I am sure in a lifetime you’d set the bar for young ladies and they still might not be able to catch up. I have been to so many places and I truly have found remarkable people but you are rare there is just about 2 of you in the world, You and our daughter. Happy birthday Asabi ❤
+
+        Know that I Love you to the moon and back</div>
     </div>
   </body>
 
