--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         </div>
       </div>
     </div>
-      <div class="birthday-text">To the most Amazing woman in the world,</br> I must say that the world would probably exist in chaos without you, you are an epitome of beauty, a goddess.</br> I am sure in a lifetime you’d set the bar for young ladies and they still might not be able to catch up. I have been to so many places and I truly have found remarkable people but you are rare there is just about 2 of you in the world, You and our daughter. Happy birthday Asabi ❤
+      <div class="birthday-text">To the most Amazing woman in the world,</br> I must say that the world would probably exist in chaos without you, you are an epitome of beauty, a goddess.</br> I am sure in a lifetime you’d set the bar for young ladies and they still might not be able to catch up.</br> I have been to so many places and I truly have found remarkable</br> people but you are rare there is just about 2 of you in the world, You and our daughter.</br> Happy birthday Asabi ❤</br>
 
         Know that I Love you to the moon and back</div>
     </div>
