--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         </div>
       </div>
     </div>
-      <div class="birthday-text">i would be lying if i said i don't miss you, i really do alot, but whatever makes you happy i am okay with that.</br> have a lovely day  ADERINSOLA</div>
+      <div class="birthday-text"> Have A DAY!!!</div>
     </div>
   </body>
 
